--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -2,6 +2,7 @@
 
 <ul>
   <% @episodes.each do |episode| %>
-    <li><%= "Episode #{episode.number} - #{episode.date.strftime("%B %d, %Y")}"%></li>
+    <li><%= "Episode #{episode.number} - #{episode.date.strftime("%B %d, %Y")}"%></li> |
+    <%= link_to "View Episode Info", episode_path(episode) %> <br><br>
   <% end %>
 </ul>
